; ModuleID = '/home/carl/AnghaBench/tg/extr_loop.c_on_failed_login.c'
source_filename = "/home/carl/AnghaBench/tg/extr_loop.c_on_failed_login.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tgl_state = type { i32, i32 }

@.str = private unnamed_addr constant [14 x i8] c"login failed\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"login error #%d: %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [78 x i8] c"you can relogin by deleting auth file or running telegram-cli with '-q' flag\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @on_failed_login(%struct.tgl_state* %0) #0 {
  %2 = alloca %struct.tgl_state*, align 8
  store %struct.tgl_state* %0, %struct.tgl_state** %2, align 8
  %3 = call i32 (i8*, ...) @logprintf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %4 = load %struct.tgl_state*, %struct.tgl_state** %2, align 8
  %5 = getelementptr inbounds %struct.tgl_state, %struct.tgl_state* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.tgl_state*, %struct.tgl_state** %2, align 8
  %8 = getelementptr inbounds %struct.tgl_state, %struct.tgl_state* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 (i8*, ...) @logprintf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i32 %6, i32 %9)
  %11 = call i32 (i8*, ...) @logprintf(i8* getelementptr inbounds ([78 x i8], [78 x i8]* @.str.2, i64 0, i64 0))
  %12 = call i32 @exit(i32 2) #3
  unreachable
}

declare dso_local i32 @logprintf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
